# python-vamp-plugin

./: .gitignore  CMakeLists.txt
src/cpp/: CMakeLists.txt  PythonCasting.h  PythonPlugin.cpp  PythonPlugin.h  PythonPluginAdapter.cpp  PythonPluginAdapter.h  common.h  plugin.cpp  util.h
src/python/: CMakeLists.txt
src/python/vplug/: __init__.py  discovery.py  vampinterface.py
src/python/vplug/test/: __init__.py  dummyplugin.py
test/: CMakeLists.txt  simple_test.cpp  test_cast.cpp  test_main.cpp
test/python/: vampstructs.py
